--- a/docassemble/MLHMotionRegardingChildSupport/data/questions/review.yml
+++ b/docassemble/MLHMotionRegardingChildSupport/data/questions/review.yml
@@ -1,31 +1,4 @@
-event: review_intro
-code: review_form
----
-event: review_prior_case
-code: review_form
----
-event: review_your_info
-code: review_form
----
-event: review_other_info
-code: review_form
----
-event: review_children_info
-code: review_form
----
-event: review_prior_order
-code: review_form
----
-event: review_agreement
-code: review_form
----
-event: review_support_requested
-code: review_form
----
-event: review_conclusion
-code: review_form
----
-event: review_form
+event: review_full
 id: |-
   review screen
 
@@ -33,8 +6,15 @@ question: |-
   Review your answers
 
 review:
+  - raw html: |
+      ${ start_accordion('<h2 class="h5">How does this page work?</h2>') }
   - note: |
-      <h2 class="h3">Your Case Information</h2>
+      This page starts out blank. As you answer more questions, they will show up here. Then you can edit your answers.
+      
+      Some questions will not show up here. To change an answer that does not appear on this page, use the **Undo** button or start the interview again.    
+  - raw html: |
+      ${ next_accordion('<h2 class="h5">Your Case Information</h2>') }
+    show if: docket_number
   - Edit: users.revisit
     button: |-
       **You**
@@ -87,17 +67,16 @@ review:
       **What party are you in your existing case?**
 
       ${ showifdef('user_ask_role').capitalize() }
-  - note: |
-      ---
-
-      <h2 class="h3">Prior Support Order</h2>
+  - raw html: |
+      ${ next_accordion('<h2 class="h5">Prior Support Order</h2>') }
+    show if: has_existing_support_order or not has_existing_support_order
   - note: |
       % if has_existing_support_order:
       **You have an existing support order.** 
       % else:
       **You do NOT have an existing support order.**
       % endif
-      (If you need to change this answer, please start over from the beginning.)
+      (If you need to change this answer, please use the **Undo** button or start over from the beginning.)
   - Edit: recent_judgment_date
     button: |
       **What date was the most recent support order entered?**: ${ showifdef('recent_judgment_date') }
@@ -148,16 +127,15 @@ review:
       % if paid_medical_costs:
       How much ordinary medical costs were ordered per month?: ${ currency(showifdef('medical_care_amount')) }
       % endif
-  - note: |
-      ---
-
-      <h2 class="h3">Agreement Information</h2>
+  - raw html: |
+      ${ next_accordion('<h2 class="h5">Agreement Information</h2>') }
+    show if: agreed_on_who_pays or not agreed_on_who_pays
   - Edit:
       - agreed_on_who_pays
       - recompute:
         - circumstance_changes_update
     button: |
-      **Have you and ${ other_parties } agreed on who should pay support and how much?**
+      **Have you and the other parent agreed on who should pay support and how much?**
 
       ${ word(yesno(agreed_on_who_pays)) }
   - Edit:
@@ -175,10 +153,9 @@ review:
 
       ${ showifdef('circumstance_changes') }
     show if: have_circumstances_changed
-  - note: |
-      ---
-
-      <h2 class="h3">Support Requested Information</h2>
+  - raw html: |
+      ${ next_accordion('<h2 class="h5">Support Requested Information</h2>') }
+    show if: who_pays_new
   - label: Edit
     fields:
       - who_pays_new
@@ -260,37 +237,8 @@ review:
       esign
     button: |
       **Would you like to add your electronic signature to your form?**: ${ word(yesno(esign)) }
-  - Edit: |-
-      has_hearing_info
-    button: |
-      **Motion Hearing Information**
-
-      ${ word(yesno(has_hearing_info)) }
-  - Edit: |-
-      hearing_date
-    button: |
-      **When will the hearing be?**
-
-      Date of hearing: ${ showifdef('hearing_date') }
-
-      Hearing Time: ${ showifdef('hearing_time') }
-  - Edit: |-
-      hearing_at_court
-    button: |
-      **Where will the hearing be?**
-
-      Will the hearing be in person at the courthouse?: ${ word(yesno(hearing_at_court)) }
-
-      * Type the address if it will be at a physical location. * If the hearing will be online or by phone, briefly explain.: ${ showifdef('hearing_address_on_one_line') }
-  - Edit: |-
-      judge.name
-    button: |
-      **What judge will hear your motion?**
-
-      Judge's name: ${ showifdef('judge.name') }
-
-      Judge's bar number: ${ showifdef('judge_bar_number') }
-
+  - raw html: |
+      ${ end_accordion() }
 ---
 id: revisit users
 question: Edit your answers about yourself
