--- a/docassemble/MLHMotionRegardingChildSupport/data/questions/review.yml
+++ b/docassemble/MLHMotionRegardingChildSupport/data/questions/review.yml
@@ -13,7 +13,9 @@ review:
       
       Some questions will not show up here. To change an answer that does not appear on this page, use the **Undo** button or start the interview again.    
   - raw html: |
-      ${ next_accordion('<h2 class="h5">Your Case Information</h2>') }
+      ${ end_accordion() }
+  - note: |
+      <h2 class="h3">Your Case Information</h2>
     show if: docket_number
   - Edit: users.revisit
     button: |-
@@ -67,8 +69,10 @@ review:
       **What party are you in your existing case?**
 
       ${ showifdef('user_ask_role').capitalize() }
-  - raw html: |
-      ${ next_accordion('<h2 class="h5">Prior Support Order</h2>') }
+  - note: |
+      ---
+
+      <h2 class="h3">Prior Support Order</h2>
     show if: has_existing_support_order or not has_existing_support_order
   - note: |
       % if has_existing_support_order:
@@ -127,9 +131,11 @@ review:
       % if paid_medical_costs:
       How much ordinary medical costs were ordered per month?: ${ currency(showifdef('medical_care_amount')) }
       % endif
-  - raw html: |
-      ${ next_accordion('<h2 class="h5">Agreement Information</h2>') }
-    show if: agreed_on_who_pays or not agreed_on_who_pays
+  - note: |
+      ---
+
+      <h2 class="h3">Agreement Information</h2>
+    show if: agreed_on_who_pays
   - Edit:
       - agreed_on_who_pays
       - recompute:
@@ -153,8 +159,10 @@ review:
 
       ${ showifdef('circumstance_changes') }
     show if: have_circumstances_changed
-  - raw html: |
-      ${ next_accordion('<h2 class="h5">Support Requested Information</h2>') }
+  - note: |
+      ---
+
+      <h2 class="h3">Support Requested Information</h2>
     show if: who_pays_new
   - label: Edit
     fields:
@@ -237,8 +245,6 @@ review:
       esign
     button: |
       **Would you like to add your electronic signature to your form?**: ${ word(yesno(esign)) }
-  - raw html: |
-      ${ end_accordion() }
 ---
 id: revisit users
 question: Edit your answers about yourself
