--- a/docassemble/MLHMotionRegardingChildSupport/data/questions/motion_regarding_child_support.yml
+++ b/docassemble/MLHMotionRegardingChildSupport/data/questions/motion_regarding_child_support.yml
@@ -31,6 +31,10 @@ code: |
   al_form_type = "existing_case"
 ---
 code: |
+  accessible_instructions_link = "[https://michiganlegalhelp.org/step/2437](https://michiganlegalhelp.org/step/2437)"
+  resource_page_link = "[https://michiganlegalhelp.org/node/1083](https://michiganlegalhelp.org/node/1083)"
+---
+code: |
   MLH_time_min = 20
   MLH_time_max = 60
   MLH_materials_included = True
@@ -949,7 +953,7 @@ include:
 ##### Documents 
 #######################################################
 objects:
-  - mrcs_instructions: ALDocument.using(title="Instructions", filename="Instructions.docx", enabled=True, has_addendum=False)
+  - instructions: ALDocument.using(title="Instructions", filename="Instructions", enabled=True, has_addendum=False)
   - mrcs_attachment_main: ALDocument.using(title="Motion Regarding Support", filename="Motion Regarding Support - FOC 50.pdf", enabled=True, default_overflow_message=AL_DEFAULT_OVERFLOW_MESSAGE)
   - mrcs_attachment_addendum: ALDocument.using(title="Motion Regarding Support Addendum", filename="Motion Regarding Support Addendum.docx")
   - mrcs_foc10: ALDocument.using(title="Uniform Child Support Order", filename="Uniform Child Support Order - FOC 10.pdf", has_addendum=False)
@@ -960,7 +964,10 @@ objects:
   - mrcs_attachment: ALDocumentBundle.using(elements=[mrcs_attachment_main, mrcs_attachment_addendum], filename="Motion RegardingSupport - FOC 50.pdf", title="Motion Regarding Support", enabled=True)
 ---
 objects:
-  - al_user_bundle: ALDocumentBundle.using(elements=[mrcs_instructions, mrcs_attachment, mrcs_foc10, mrcs_foc10d, mrcs_foc12], filename="Motion Regarding Child Support (All Forms).pdf", title="All forms to download for your records", enabled=True)
+  - al_cover_bundle: ALDocumentBundle.using(elements=[cover_sheet_template, instructions], filename="Instructions - Do not file this", title="Instructions", enabled=True)
+---
+objects:
+  - al_user_bundle: ALDocumentBundle.using(elements=[al_cover_bundle, mrcs_attachment, mrcs_foc10, mrcs_foc10d, mrcs_foc12], filename="Motion Regarding Child Support (All Forms).pdf", title="All forms to download for your records", enabled=True)
   - al_court_bundle: ALDocumentBundle.using(elements=[mrcs_attachment, mrcs_foc10, mrcs_foc10d, mrcs_foc12], filename="Motion Regarding Child Support (All Forms).pdf", title="All forms to download for your records", enabled=True)
 ---
 code: |
@@ -999,11 +1006,11 @@ code: |
   mrcs_attachment.overflow_fields.gathered = True
 ---
 attachment:
-  name: Motion Regarding Support Instructions
-  filename: Instructions
-  variable name: mrcs_instructions[i]
-  skip undefined: True
-  docx template file: mrcs_next_steps.docx
+  name: instructions  
+  variable name: instructions[i]
+  skip undefined: False
+  tagged pdf: True
+  docx template file: Instructions_-_Motion.docx
 ---
 attachment:
   name: Motion Regarding Support Attachment
