move review screen intro language to variables

--- a/docassemble/MLHMotionRegardingChildSupport/data/questions/motion_regarding_child_support.yml
+++ b/docassemble/MLHMotionRegardingChildSupport/data/questions/motion_regarding_child_support.yml
@@ -20,6 +20,11 @@ metadata:
     - Bryce Willey
     - Amy Billmire
     - Emily Miller
+# to move to framework
+---
+code: |
+  review_empty_explainer = "This page starts out blank. As you answer more questions, they will show up here. Then you can edit your answers."
+  review_accordion_explainer = "Tap below to open different sections and edit answers."
 ---
 code: |
   interview_short_title = "Motion Regarding Child Support"
