--- a/docassemble/MLHMotionRegardingChildSupport/data/questions/motion_regarding_child_support.yml
+++ b/docassemble/MLHMotionRegardingChildSupport/data/questions/motion_regarding_child_support.yml
@@ -25,6 +25,7 @@ metadata:
 code: |
   review_empty_explainer = "This page starts out blank. As you answer more questions, they will show up here. Then you can edit your answers."
   review_accordion_explainer = "Tap below to open different sections and edit answers."
+  review_screen_prep = True
 ---
 code: |
   interview_short_title = "Motion Regarding Child Support"
@@ -128,6 +129,7 @@ id: interview_order_motion_regarding_child_support
 code: |
   nav.set_section("review_full")
   nav.set_section("signpost_intro")
+  review_screen_prep
   MLH_intro_landing
   substantive_intro
   more_help_intro
